<resources>
    <string name="app_name">KotlinTutorial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_example">Example</string>
    <string name="title_color">Color</string>
    <string name="title_opensource">OpenSource</string>
    <string name="title_rateus">Rate Us</string>
</resources>
